--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Facturar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Facturar.cshtml
@@ -753,7 +753,8 @@
                                             if (result.isConfirmed) {
 
                                                 //location.reload();
-                                                window.location.href = window.location.href.split("/Facturar")[0].split("/Llamadas")[0] + '/Facturas';
+                                               // window.location.href = window.location.href.split("/Facturar")[0].split("/Llamadas")[0] + '/Facturas';
+                                                window.close();
                                             }
                                         })
 
@@ -1936,7 +1937,7 @@
                             {
                                 case "01":
                                     {
-                                        <h3 class="text-dark mb-1">Factura</h3>
+                                            <h3 class="text-dark mb-1">Factura</h3>
                                         break;
                                     }
 
