--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -732,6 +732,16 @@
                         <div class="col-md-4 pr-1">
 
                             <div class="form-group">
+                                <label>Oferta Aprobada</label>
+                                <input type="text" class="form-control form-control-lg" id="oAprobada" asp-for="DocNumOfertaAprobada" readonly>
+
+                            </div>
+
+
+                        </div>
+                        <div class="col-md-4 pr-1">
+
+                            <div class="form-group">
                                 <label>Bodega Inicial</label>
                                 <input type="text" class="form-control form-control-lg" id="bodI" asp-for="BTS.BodegaInicial" readonly>
 
