--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -460,7 +460,10 @@
         var HistoricoDetallado = [];
 
         $(document).ready(function () {
-
+            $('table.firstAct').DataTable({
+                "order": [[0, "asc"]],
+                "displayLength": 100,
+            });
             Recuperar();
             onChangeStatusInicial();
         });
@@ -2254,7 +2257,7 @@
 
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered first">
+                    <table class="table table-striped table-bordered firstAct">
                         <thead>
                             <tr>
                                 <th>No. Actividad</th>
