--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
@@ -291,7 +291,7 @@
                         <tbody>
                             @foreach (var item in Model.Objeto)
                             {
-                                <tr> 
+                                <tr style="@(!string.IsNullOrEmpty(item.PrioridadAtencion) ?   item.PrioridadAtencion == "1" ? "background-color: #ff877e" : "" : "")">
                                     <td>@item.idLlamada</td>
                                     @{
                                         var id = item.idTecnico.ToString();
